# voice_agent_api

./: .gitignore  README.md  api.py  apply_file_alias_migration.py  example_client.py  handlers.py  main.py  mypy.ini  pyproject.toml  schema.sql  service.py  supabase_file_alias_migration.sql  verify_file_alias_column.py
database/: __init__.py  init_db.py  migrations.py  models.py  repository.py  schema.sql  supabase_client.py
docs/: auth.md  openrouter_model_configuration.md
logic/: api.py  auth.py  config.py  handlers.py  logging_config.py  service.py
model/: dtos.py
rag/config/: settings.py
rag/processors/: base_processor.py  equation_processor.py  generic_processor.py  image_processor.py  table_processor.py
rag/rag/: custom_processor.py  document_parser.py  embedding.py  local_embedding.py  nomic_embedding.py  openrouter.py  performance_monitor.py  processor.py  questionnaire_generator.py  simple_embedding.py  storage.py
rag/utils/: exceptions.py  file_handler.py
supabase/: .env.example  MIGRATION_CONSOLIDATION_SUMMARY.md  README.md  apply_migrations.sh  cleanup_debug_files.sh  config.json  deploy_consolidated_migrations.sh  deploy_functions.sh  oauth_setup_guide.md  schema_backup.sql  setup_database.sh
supabase/consolidated_migrations/: README.md
supabase/functions/: get_recent_qna.sql  get_user_file_stats.sql  get_user_profile.sql
supabase/migrations/: 002_rls_policies.sql  003_functions.sql  004_auth_hook.sql  20250915000000_create_file_details_table.sql  (+5 more)
tests/: __init__.py  test_auth.py  test_custom_rag.py  test_main.py  test_milvus_batch_insertion.py  test_models.py  test_modular_structure.py  test_openrouter_model_config.py  test_questionnaire_consolidation.py  test_rag_api.py  test_rag_flow.py  test_rag_integration.py  test_rag_simple.py  test_user_info_extraction.py
(+5 files in other folders)
