[project]
name = "portal-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "livekit[server,voice-agent-pipeline,voiceagentpipeline]>=1.0.12",
    "livekit-agents[deepgram,groq,sarvam,silero,turn-detector]>=1.2.5",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "tavily-python>=0.7.10",
    "python-multipart>=0.0.20",
    "loguru>=0.7.3",
    "supabase>=2.18.1",
    "sqlalchemy>=2.0.43",
    "pytest>=8.4.1",
    "httpx>=0.28.1",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
]
