[project]
name = "portal-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "livekit[server,voice-agent-pipeline,voiceagentpipeline]>=1.0.12",
    "livekit-agents[deepgram,groq,sarvam,silero,turn-detector]>=1.2.5",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "tavily-python>=0.7.10",
    "python-multipart>=0.0.20",
    "loguru>=0.7.3",
    "supabase>=2.18.1",
    "sqlalchemy>=2.0.43",
    "pytest>=8.4.2",
    "httpx>=0.28.1",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "mypy>=1.17.1",
    "docling>=2.51.0",
    "fitz>=0.0.1.dev2",
    "mineru>=2.2.0",
    "numpy>=2.3.2",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "pymilvus>=2.6.1",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "pytest-cov>=6.3.0",
    "raganything[all]>=1.2.7",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "poppler-utils>=0.1.0",
]
